# -RDK-X5-

./: README_cn.md
qs/: TECHNICAL_DOC.md  main.py  rdkx5_asr_uart.py
qs/App/: ds_api.py
qs/Control/: arm_wheel.py
qs/Driver/: 1.py  hmi.py  lora.py  motor.py  pca9685.py  servo.py  voice.py
qs/test/: motor_test.py
rescue_robot/: README.md  package.xml  patch_inspect.py  patch_inspect2.py  patch_inspect3.py  requirements.txt  setup.py  项目代码说明.html
rescue_robot/config/: camera_params.yaml  depth_anything_v2_bpu.yaml  depth_vits_392x518_v124.yaml  robot_params.yaml  yolov8n_bpu.yaml
rescue_robot/docs/: RDK部署指南.md  SCP手动部署指南.md  基础设计文档.md
rescue_robot/launch/: mipi_cam_gs130w.launch.py  rescue_robot.launch.py  rescue_robot_monocular.launch.py
rescue_robot/rescue_robot/: body_detector_node.py  bpu_model.py  bpu_yolov8_detector.py  camera_node.py  camera_servo_node.py  depth_estimator_node.py  utils.py  visualization_node.py
rescue_robot/scripts/: camera_calibration.py  convert_yolov8_bpu.sh  deploy_models.sh  deploy_to_rdk.ps1  deploy_to_rdk.sh  export_depth_anything_v2_onnx.py  export_yolov8_onnx.py  generate_calib_data.py  offline_simulation.py  setup_monocular_depth.sh  test_yolov8_onnx.py
rescue_robot/test/: test_nodes_smoke.py  test_utils.py
rescue_robot/urdf/: rescue_robot.urdf
