<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rescue_robot</name>
  <version>0.1.0</version>
  <description>基于RDK单目视觉的塌方废墟救援寻路机器人 - 纯视觉感知方案</description>
  <maintainer email="developer@example.com">rescue_robot</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>vision_msgs</depend>

  <!-- 仅用于发布 URDF 静态 TF -->
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- MIPI 相机驱动运行时依赖（可选） -->
  <exec_depend>hobot_mipi_cam</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
